finished all functionality of memorize window. Just need a little bit of display changes and fixing the gap between two components

--- a/src/components/Memorize/MemorizeCountdown/index.css
+++ b/src/components/Memorize/MemorizeCountdown/index.css
@@ -75,6 +75,10 @@
   background-color: red;
 }
 
+#stop-button.disabled {
+  background-color: #DDDDDD;
+}
+
 #memorize-timer-state-options-container button:nth-of-type(3) {
   border-bottom-left-radius: 10px;
   color: yellow;
@@ -82,5 +86,5 @@
 
 #memorize-timer-state-options-container button:disabled {
   box-shadow: none;
-  color: #DDDDDD;
+  opacity: .8;
 }
