--- a/src/components/Memorize/MemorizeQuizWIndow/index.css
+++ b/src/components/Memorize/MemorizeQuizWIndow/index.css
@@ -30,6 +30,8 @@
   margin-right: 10px;
   height: 35px;
   padding: 5px 5px;
+  position: relative;
+  top: -7px;
 }
 
 .memorize-quiz-window-verse-p {
